--- a/portfolio/src/components/header/Header.module.css
+++ b/portfolio/src/components/header/Header.module.css
@@ -21,32 +21,35 @@
   gap: 5px;
   align-items: center;
   font-size: 60px;
-  color: wheat;
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 .header_wrapper ul {
   color: var(--text-color);
-  font-size: 16px;
+  font-size: 14px;
   width: 80%;
-  background:var(--bg-color) ;
+  background: var(--lite-bg);
   padding: 20px;
   border-radius: 8px;
   border: 1px solid var(--primary-color);
   border-right: 0;
   border-bottom: 0;
   transition: 1s;
+  display: flex;
+  gap: 8px;
+  flex-direction: column;
 }
-.header_wrapper ul:hover{
-    box-shadow: 0px 8px 8px var(--primary-color);
+.header_wrapper ul:hover {
+  box-shadow: 0px 8px 8px var(--primary-color);
 }
 .header_wrapper ul li:hover {
-color: var(--primary-color);
-
+  color: var(--primary-color);
 }
 
 .header_wrapper .social {
   display: flex;
-  gap: 8px; 
+  gap: 8px;
 }
 
 .header_wrapper .social i {
@@ -74,24 +77,24 @@ color: var(--primary-color);
   box-shadow: 0px 8px 8px #ffffff;
 }
 
-.react_typed{
+.react_typed {
   color: var(--primary-color);
-  font-size:x-large;
+  font-size: x-large;
   display: flex;
   gap: 6px;
 
   /* background:var(--primary-color); */
 }
 .react_typed span {
-background-color: var(--primary-color);
-color: black;
+  background-color: var(--primary-color);
+  color: black;
   border-radius: 8px;
   padding-inline: 4px;
 }
 @media screen and (max-width: 500px) {
   .header_wrapper {
     gap: 30px;
-      padding: 18px;
+    padding: 18px;
   }
   .header_wrapper small {
     font-size: 16px;
@@ -102,7 +105,6 @@ color: black;
     font-size: 40px;
   }
   .header_wrapper ul {
-      width: 100%;
+    width: 100%;
   }
 }
-
