--- a/portfolio/src/components/services/Services.module.css
+++ b/portfolio/src/components/services/Services.module.css
@@ -1,6 +1,3 @@
-/* .services_wrapper{
-    color: var(--text-color)
-} */
 .service_cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -24,6 +21,7 @@
 
 .service_cards .card img {
   width: 200px;
+  height: 200px;
 }
 
 .service_cards .card:hover {
@@ -35,7 +33,7 @@
 }
 
 .service_cards .card p {
-  font-size: 16px;
+  font-size: 14px;
 }
 
 @media screen and (max-width: 1200px) {
