--- a/portfolio/src/components/projects/Projects.module.css
+++ b/portfolio/src/components/projects/Projects.module.css
@@ -65,6 +65,7 @@
 .project_description{
   padding: 16px;
   font-size: small;
+  color: var(--text-color);
 }
 @media screen and (max-width: 1200px) {
   .projects_cards {
