--- a/portfolio/src/components/about/About.module.css
+++ b/portfolio/src/components/about/About.module.css
@@ -14,6 +14,7 @@
   width: 35%;
   border-radius: 12px;
   transition: 0.6s;
+  background-color: var(--card-bg);
 }
 .about .about_image img {
   width: 100%;
