--- a/portfolio/src/components/header/Header.module.css
+++ b/portfolio/src/components/header/Header.module.css
@@ -102,7 +102,7 @@
   .header_wrapper h2 {
     flex-direction: column;
     align-items: flex-start;
-    font-size: 40px;
+    font-size: 30px !important;
   }
   .header_wrapper ul {
     width: 100%;
