--- a/portfolio/src/components/about/About.module.css
+++ b/portfolio/src/components/about/About.module.css
@@ -38,6 +38,9 @@
   background-color: var(--card-bg);
   transition: 0.6s;
 }
+.about .about_content div {
+  padding-left: 20px;
+}
 .about .about_content:hover {
   box-shadow: 5px 5px 5px var(--box-shadow);
 }
@@ -195,7 +198,11 @@ gap: 10px;
     width: 100%;
   }
 }
-
+.github_status{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 !important;
+}
 @media screen and (max-width: 900px) {
   .about {
     flex-direction: column;
