--- a/portfolio/src/components/projects/Projects.module.css
+++ b/portfolio/src/components/projects/Projects.module.css
@@ -81,4 +81,7 @@ color: white;
   .projects_cards {
     grid-template-columns: repeat(1, 1fr);
   }
+  .projects_cards .project_card .project_content h4 {
+    font-size: 16px;
+  }
 }
